# django-ldapdb

./: .addcopyright  .flake8  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.rst  ChangeLog  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  manage.py  manage_dev.py  requirements_dev.txt  requirements_test.txt  settings.py  setup.cfg  setup.py  tox.ini  urls.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: quality.yml  tests.yaml  tests.yml
examples/: admin.py  models.py  settings.py  tests.py  urls.py
ldapdb/: __init__.py  router.py  tests.py  version.py
ldapdb/backends/ldap/: base.py  compiler.py
ldapdb/models/: __init__.py  base.py  fields.py
ldapdb/static/js/: textarea-autosize.js
tests/: ldapdb  manage.py  runtests.py  settings.py
