[metadata]
name = django-ldapdb
version = 1.5.1.dev0
description = A LDAP database backend for Django
long_description = file: README.rst
keywords = django, ldap, database, ldapdb
url = https://github.com/django-ldapdb/django-ldapdb
author = Jeremy Lainé
author_email = jeremy.laine@m4x.org
maintainer = Raphaël Barrois
maintainer_email = raphael.barrois+django-ldapdb@polytechnique.org
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
packages = find:
python_requires = >=3.6
install_requires =
    Django>=2.2
    python-ldap>=3.0
setup_requires = setuptools

[options.packages.find]
include =
    ldapdb

[options.extras_require]
dev =
# Quality
    check-manifest
    flake8
    isort>=5.0.0
    tox
# Testing tools
    factory_boy
    volatildap>=1.1.0
# Releasing
    wheel
    zest.releaser[recommended]

[bdist_wheel]
universal = true

[zest.releaser]
; semver-style versions
version-levels = 3

[distutils]
index-servers = pypi

[flake8]
max-line-length = 120

# W503: 'and' on start of line
ignore = W503
